--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,13 @@
   <description>Mercury</description>
  
   <dependencies>
-  <!-- <dependency>
-   <groupId>aero.sita.psetest.automation</groupId>
-	<artifactId>pse-test-automation-framework</artifactId>
-	<version>6.1</version>
-</dependency> -->
+  <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.3.0</version>
+</dependency>
+
 	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 	<dependency>
 		<groupId>org.testng</groupId>
